API
/group/<groupName>/species: full list of species (with counts) currently detected inside the group
